# SPDX-License-Identifier: GPL-3.0-or-later

AUTOMAKE_OPTIONS = subdir-objects
MAINTAINERCLEANFILES = $(srcdir)/Makefile.in

dist_noinst_DATA = \
    README.md \
    $(NULL)

log2journalconfigdir=$(libconfigdir)/log2journal.d
dist_log2journalconfig_DATA = \
    log2journal.d/nginx-combined.yaml \
    $(NULL)
